--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "main": "main.js",
   "dependencies": {
-    "electron-prebuilt": "^1.1.0"
+    "electron-prebuilt": "^1.1.0",
+    "electron-packager": "7.0.2"
   }
 }
