--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "argv": "0.0.2",
     "electron-packager": "7.0.2",
     "electron-prebuilt": "^1.1.0",
-    "jsonfile": "^2.3.1"
+    "jsonfile": "^2.3.1",
+    "node-notifier": "^4.6.1"
   }
 }
