--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "productName": "Swipes",
   "version": "0.0.1",
   "main": "main.js",
+  "scripts": {
+    "dmg": "node node_modules/appdmg/bin/appdmg.js './dmg/spec.json' 'builds/Swipes Workspace-darwin-x64/Swipes Workspace.dmg' --verbose"
+  },
   "dependencies": {
     "argv": "0.0.2",
     "electron-packager": "7.0.2",
     "electron-prebuilt": "^1.1.0",
     "jsonfile": "^2.3.1",
     "node-notifier": "^4.6.1"
+  },
+  "devDependencies": {
+    "appdmg": "^0.4.5"
   }
 }
