--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "jsonfile": "^2.3.1",
     "node-notifier": "^4.6.1"
   },
-  "devDependencies": {
+  "optionalDependencies": {
     "appdmg": "^0.4.5"
   }
 }
