--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "shortid": "^2.2.6"
   },
   "devDependencies": {
-    "electron": "^1.6.0"
+    "electron": "^1.6.0",
+    "electron-installer-windows": "^0.2.0"
   }
 }
