--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   },
   "devDependencies": {
     "electron": "^1.6.0",
-    "electron-installer-windows": "^0.2.0"
+    "electron-winstaller": "^2.5.2"
   }
 }
