--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "argv": "0.0.2",
     "electron-osx-sign": "^0.4.4",
     "electron-packager": "8.5.2",
+    "electron-squirrel-startup": "^1.0.0",
     "jsonfile": "^2.3.1",
     "node-notifier": "^4.6.1",
     "shortid": "^2.2.6"
