--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Swipes",
+  "name": "swipes-electron",
   "productName": "Swipes",
   "description": "Swipes Workspace",
   "version": "0.0.6",
@@ -10,18 +10,16 @@
     "build": "node build.js"
   },
   "dependencies": {
-    "argv": "0.0.2",
-    "electron-osx-sign": "^0.4.7",
-    "electron-packager": "10.1.0",
-    "electron-squirrel-startup": "^1.0.0",
-    "jsonfile": "^4.0.0",
-    "node-notifier": "^5.1.2",
-    "rimraf": "^2.6.2",
-    "shortid": "^2.2.8"
+    "node-notifier": "^5.2.1",
+    "shortid": "^2.2.13"
   },
   "devDependencies": {
-    "electron": "^1.7.9",
-    "electron-installer-debian": "^0.7.1",
-    "electron-winstaller": "^2.6.3"
+    "argv": "0.0.2",
+    "electron": "^3.1.6",
+    "electron-installer-debian": "^0.8.1",
+    "electron-osx-sign": "^0.4.11",
+    "electron-packager": "^12.2.0",
+    "electron-winstaller": "^2.7.0",
+    "jsonfile": "^5.0.0"
   }
 }
